Refactor services to use CompletedFileUpload for model input
Service methods now accept CompletedFileUpload and URI instead of raw Turtle strings for aspect model input, improving file handling and consistency. Added MockFileUpload for testing, updated tests and utility methods, and enhanced model grouping logic to support filtering by aspect models.